bugfix/mobile login alignemnt

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -30,16 +30,12 @@
 
 @media (max-width: 600px) {
   .center-wrapper {
-    width: 50%;
-    align-items: center;
     justify-content: center;
+    align-items: center;
   }
   .login-form, .register-new-user {
-    align-self: flex-end;
-    margin-bottom: 10px;             /* Adds space between forms */
-    margin-left: 400px;
-    margin-right: 1px;
-    width: 50%;
+    width: 80%;             /* More appropriate width on smaller screens */
+    margin: 0;              /* Remove additional margins */
   }
 }
 /* Form fields: Inputs and labels */
